tests/spec/emit/snapshots/let_else_result_direct_call.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn parse(s: string) -> Result<int, string> {
    if s == "42" { Ok(42) } else { Err("bad") }
  }
  
  fn test() -> int {
    let Ok(x) = parse("42") else { return -1; };
    x
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func parse(s string) lisette.Result[int, string] {
	if s == "42" {
		return lisette.MakeResultOk[int, string](42)
	}
	return lisette.MakeResultErr[int, string]("bad")
}

func test() int {
	subject := parse("42")
	if subject.Tag != lisette.ResultOk {
		return -1
	}
	x := subject.OkVal
	return x
}
