tests/spec/emit/snapshots/let_else_result_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(res: Result<int, string>) -> int {
    let Ok(value) = res else { return -1; };
    value
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(res lisette.Result[int, string]) int {
	if res.Tag != lisette.ResultOk {
		return -1
	}
	value := res.OkVal
	return value
}
