tests/spec/emit/snapshots/let_else_shadow_variable.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() -> int {
    let opt: Option<int> = Some(99)
    let Some(opt) = opt else { return 0; };
    opt
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() int {
	opt := lisette.MakeOptionSome(99)
	if opt.Tag != lisette.OptionSome {
		return 0
	}
	opt_1 := opt.SomeVal
	return opt_1
}
