tests/spec/emit/snapshots/let_else_struct_or_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Point { x: Option<int>, y: Option<int> }
  
  fn test(p: Point) -> int {
    let Point { x: Some(a), y: Some(b) } | Point { x: Some(b), y: Some(a) } = p else { return 0; };
    a + b
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Point struct {
	x lisette.Option[int]
	y lisette.Option[int]
}

func test(p Point) int {
	var a int
	var b int
	if p.x.Tag == lisette.OptionSome && p.y.Tag == lisette.OptionSome {
		a = p.x.SomeVal
		b = p.y.SomeVal
	} else if p.x.Tag == lisette.OptionSome && p.y.Tag == lisette.OptionSome {
		b = p.x.SomeVal
		a = p.y.SomeVal
	} else {
		return 0
	}
	return a + b
}
