tests/spec/emit/snapshots/let_else_struct_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  struct Point { x: int, y: int }
  
  fn test(opt: Option<Point>) -> int {
    let Some(Point { x, y }) = opt else { return 0; };
    x + y
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

type Point struct {
	x int
	y int
}

func test(opt lisette.Option[Point]) int {
	if opt.Tag != lisette.OptionSome {
		return 0
	}
	x := opt.SomeVal.x
	y := opt.SomeVal.y
	return x + y
}
