tests/spec/emit/snapshots/let_else_struct_pattern_on_go_interface_uses_comma_ok.snap
---
source: tests/spec/emit/patterns.rs
description: |
  
  import "go:example.com/shapes"
  
  fn try_area(s: shapes.Shape) -> int {
    let shapes.Rect { W: w, H: h } = s else { return -1 }
    w * h
  }
---
package main

import "example.com/shapes"

func tryArea(s shapes.Shape) int {
	asserted, ok := s.(shapes.Rect)
	if !ok {
		return -1
	}
	w := asserted.W
	h := asserted.H
	return w * h
}
