tests/spec/emit/snapshots/let_else_subject_temp_no_collision.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let opt = Some(1);
    let Some(x) = opt else { return; };
    let subject_1 = 7;
    let _ = x;
    let _ = subject_1;
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	opt := lisette.MakeOptionSome(1)
	if opt.Tag != lisette.OptionSome {
		return
	}
}
