tests/spec/emit/snapshots/let_else_tuple_or_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(pair: (Option<int>, Option<int>)) -> int {
    let (Some(x), Some(y)) | (Some(y), Some(x)) = pair else { return 0; };
    x + y
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(pair lisette.Tuple2[lisette.Option[int], lisette.Option[int]]) int {
	var x int
	var y int
	if pair.First.Tag == lisette.OptionSome && pair.Second.Tag == lisette.OptionSome {
		x = pair.First.SomeVal
		y = pair.Second.SomeVal
	} else if pair.First.Tag == lisette.OptionSome && pair.Second.Tag == lisette.OptionSome {
		y = pair.First.SomeVal
		x = pair.Second.SomeVal
	} else {
		return 0
	}
	return x + y
}
