tests/spec/emit/snapshots/let_else_tuple_pattern.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<(int, int)>) -> int {
    let Some((a, b)) = opt else { return 0; };
    a + b
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[lisette.Tuple2[int, int]]) int {
	if opt.Tag != lisette.OptionSome {
		return 0
	}
	a := opt.SomeVal.First
	b := opt.SomeVal.Second
	return a + b
}
