tests/spec/emit/snapshots/let_else_wildcard_unused_subject.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test() {
    let _ = 1 else { panic("x") }
    ()
  }
---
package main

func test() {
	_ = 1
}
