tests/spec/emit/snapshots/let_else_with_break.snap
---
source: tests/spec/emit/control_flow.rs
description: |
  
  fn test(opt: Option<int>) {
    loop {
      let Some(x) = opt else { break; };
      let _ = x;
    }
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test(opt lisette.Option[int]) {
	for {
		if opt.Tag != lisette.OptionSome {
			break
		}
	}
}
